--- a/styles/partials/_fonts.scss
+++ b/styles/partials/_fonts.scss
@@ -2,21 +2,21 @@
 
 @font-face{
     font-family:'AvenirNext';
-    src: url(../assets/Font/AvenirNextLTPro-Regular.otf) format();
+    src: url(../assets/Font/AvenirNextLTPro-Regular.otf) format('opentype');
     font-weight: 400;
     font-style:normal;
 }
 
 @font-face{
     font-family:'AvenirNextDemi';
-    src: url(../assets/Font/AvenirNextLTPro-Demi.otf) format();
+    src: url(../assets/Font/AvenirNextLTPro-Demi.otf) format('opentype');
     font-weight: 600;
     font-style:normal;
 }
 
 @font-face{
     font-family:'AvenirNextBold';
-    src: url(../assets/Font/AvenirNextLTPro-Bold.otf) format();
+    src: url(../assets/Font/AvenirNextLTPro-Bold.otf) format('opentype');
     font-weight: 700;
     font-style:normal;
 }
