add font styling for tablet and mobile modes, organise code in sass

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -14,6 +14,18 @@ $mobile-section-header--size:24px;
 $mobile-section-header--lineheight:32px;
 $mobile-section-header--textweight:700;
 
+$mobile-sub-header--size:14px;
+$mobile-sub-header--lineheight:22px;
+$mobile-sub-header--textweight:600;
+
+$mobile-bodycopy--size:13px;
+$mobile-bodycopy--lineheight:18px;
+$mobile-bodycopy--textweight:400;
+
+$mobile-footercopy--size:14px;
+$mobile-footercopy--lineheight:20px;
+$mobile-footercopy--textweight:400;
+
 $desktop-page-header--size:60px;
 $desktop-page-header--lineheight:68px;
 $desktop-page-header--textweight:700;
