--- a/styles/shows.css
+++ b/styles/shows.css
@@ -1,1 +1,87 @@
-/*# sourceMappingURL=shows.css.map */
+@font-face {
+  font-family: "AvenirNext";
+  src: url(../assets/Font/AvenirNextLTPro-Regular.otf) format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+@font-face {
+  font-family: "AvenirNextDemi";
+  src: url(../assets/Font/AvenirNextLTPro-Demi.otf) format("opentype");
+  font-weight: 600;
+  font-style: normal;
+}
+@font-face {
+  font-family: "AvenirNextBold";
+  src: url(../assets/Font/AvenirNextLTPro-Bold.otf) format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
+.article:hover {
+  background-color: aqua;
+}
+
+.hero-content {
+  display: flex;
+  position: relative;
+  text-align: left;
+  background-color: rgb(0, 0, 0);
+  margin-top: 0;
+  padding-top: 0;
+}
+.hero-content__title {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+  color: #fff;
+  font-family: "AvenirNextBold", sans-serif;
+  position: absolute;
+  display: flex;
+  align-self: center;
+  color: #fff;
+  margin-left: 1rem;
+}
+.hero-content__subtitle {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+  color: #fff;
+  font-family: "AvenirNextBold", sans-serif;
+  position: absolute;
+  display: flex;
+  align-self: center;
+  color: #fff;
+  margin-left: 1rem;
+}
+.hero-image img {
+  display: flex;
+  width: 100%;
+  height: auto;
+  opacity: 0.5;
+  -o-object-position: center;
+     object-position: center;
+}
+
+.show-card {
+  background-color: #fff;
+  transition: background-color 0.3s;
+}
+
+.highlighted {
+  background-color: blue;
+}
+
+.show-card:hover {
+  background-color: #FAFAFA;
+}
+
+.hover-state {
+  background-color: #FAFAFA;
+}
+
+.active-state {
+  background-color: #E1E1E1 !important;
+}
+
+.inactive-state {
+  background-color: #fff;
+}/*# sourceMappingURL=shows.css.map */
