fix headers for shows section at tablet and desktop breakpoints

--- a/styles/shows.css
+++ b/styles/shows.css
@@ -110,15 +110,19 @@
   background-color: #000000;
 }
 
+.show-header2 {
+  display: none;
+}
+
 @media (min-width: 768px) {
   .show-card {
     display: flex;
     justify-content: space-between;
   }
-  .show-header {
+  .showcard-title2 {
     display: none;
   }
-  .show-header {
+  .show-header, .show-header2 {
     width: 100vw;
     display: flex;
     flex-direction: row;
@@ -133,7 +137,30 @@
     font-weight: 700;
     font-family: "AvenirNext";
   }
-  .title-array {
+  .title-array2 {
+    display: none;
+  }
+}
+@media (min-width: 1024px) {
+  .shows {
+    display: flex;
+    flex-direction: row;
+  }
+  .showcard-title2 {
+    width: 100%;
+    display: flex;
+  }
+  .showcard-title {
+    display: none;
+  }
+  .show-card {
+    margin-left: 25vw;
+  }
+  .show-header2 {
+    width: 100%;
+    text-align: left;
+  }
+  .title-array2 {
     display: none;
   }
 }/*# sourceMappingURL=shows.css.map */
