format hero titles and add soundcloud track

--- a/styles/shows.css
+++ b/styles/shows.css
@@ -16,8 +16,81 @@
   font-weight: 700;
   font-style: normal;
 }
-.article:hover {
-  background-color: aqua;
+body {
+  margin: 0;
+  padding: 0;
+  font-family: "AvenirNext", sans-serif;
+  box-sizing: border-box;
+}
+
+ul, a, a:link, a:visited {
+  text-decoration: none;
+  list-style-type: none;
+  padding: 0;
+}
+
+.navbar {
+  text-align: center;
+  width: 100%;
+  background-color: #323232;
+  display: inline-block;
+  padding-top: 1.5rem;
+}
+.navbar-list {
+  display: flex;
+  justify-content: space-between;
+  padding: 0;
+  margin: 0;
+}
+.navbar-list__item {
+  text-align: center;
+  width: 50%;
+}
+.navbar-list__title {
+  display: flex;
+  justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .navbar {
+    display: flex;
+    justify-content: flex-start;
+    margin-bottom: 0;
+    padding-top: 2.25rem;
+  }
+  .navbar-list {
+    margin-bottom: 0;
+  }
+  .navbar-list__item {
+    display: flex;
+    justify-content: center;
+    padding: 0 2.25rem;
+    width: 33%;
+  }
+  .navbar-list__title {
+    display: flex;
+    justify-content: flex-start;
+    align-content: center;
+    flex-wrap: wrap;
+    margin: 0 2.25rem;
+  }
+}
+.page-header {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 700;
+  color: #fff;
+  font-family: "AvenirNext", sans-serif;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+
+.section-header {
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 600;
+  color: #fff;
+  font-family: "AvenirNextBold", sans-serif;
 }
 
 .hero-content {
@@ -34,22 +107,20 @@
   font-weight: 700;
   color: #fff;
   font-family: "AvenirNextBold", sans-serif;
-  position: absolute;
-  display: flex;
-  align-self: center;
-  color: #fff;
-  margin-left: 1rem;
 }
 .hero-content__subtitle {
-  font-size: 24px;
+  font-size: 14px;
   line-height: 32px;
   font-weight: 700;
   color: #fff;
   font-family: "AvenirNextBold", sans-serif;
+}
+.hero-content .titles {
   position: absolute;
   display: flex;
+  flex-direction: column;
+  width: 100%;
   align-self: center;
-  color: #fff;
   margin-left: 1rem;
 }
 .hero-image img {
@@ -59,6 +130,358 @@
   opacity: 0.5;
   -o-object-position: center;
      object-position: center;
+}
+
+@media (min-width: 768px) {
+  .page-header {
+    font-size: 36px;
+    line-height: 44px;
+    color: #fff;
+    font-family: "AvenirNext", sans-serif;
+    margin-top: 0;
+    margin-bottom: 0;
+  }
+  .section-header {
+    font-size: 24px;
+    line-height: 32px;
+    color: #fff;
+    font-family: "AvenirNextDemi", sans-serif;
+  }
+  .hero-content__title {
+    font-size: 60px;
+    line-height: 68px;
+    color: #fff;
+    font-family: "AvenirNextBold", sans-serif;
+  }
+}
+.hero, .about, .photogallery {
+  margin-top: 0;
+  padding-top: 0;
+  display: flex;
+  width: 100%;
+  height: auto;
+}
+
+@media (min-width: 768px) {
+  .photogallery-content {
+    margin: 2.25rem;
+  }
+}
+.about-content {
+  padding: 0 1rem;
+}
+.about-content__title {
+  font-size: 24px;
+  line-height: 32px;
+  margin-top: 1.5rem;
+  color: #323232;
+  font-family: "AvenirNextDemi";
+}
+.about-content__text .subheader p {
+  font-size: 14px;
+  line-height: 22px;
+  font-weight: 600;
+}
+.about-content__text .boldcopy {
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 700;
+}
+.about-content__text .copy {
+  display: block;
+}
+.about-content__text .copy p {
+  padding-right: 2.25rem;
+  font-size: 13px;
+  line-height: 18px;
+  font-weight: 400;
+}
+.about-content__image img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.photogallery-content {
+  margin: 1rem;
+}
+
+.photogallery-title {
+  margin: 1rem;
+}
+
+@media (min-width: 768px) {
+  .hero-content__title {
+    margin-left: 2.25rem;
+  }
+  .about-content {
+    padding: 0 2.25rem;
+  }
+  .about-content__text {
+    margin: 0 2.25rem;
+  }
+  .about-content__text .copy {
+    display: flex;
+    flex-wrap: nowrap;
+    text-align: left;
+    justify-content: space-between;
+  }
+  .about-content__text .subheader p {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 600;
+    color: #323232;
+  }
+  .about-content__text .boldcopy {
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 700;
+    color: #323232;
+  }
+  .about-content__text .copy p {
+    padding-right: 2.25rem;
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 400;
+  }
+  .about-content__title {
+    font-size: 36px;
+    line-height: 44px;
+    margin-top: 3rem;
+    color: #323232;
+    font-family: "AvenirNextDemi";
+  }
+  .about-content__image {
+    margin: 2.25rem;
+    padding: 0 2.25rem;
+  }
+}
+.photogallery-content__image img {
+  width: 100%;
+  height: auto;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.photogallery {
+  display: inline-block;
+  background-color: #FAFAFA;
+}
+
+@media (min-width: 768px) {
+  .header__list {
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .footer-list--no-mobile {
+    display: flex;
+    color: #fff;
+  }
+  .photogallery-title {
+    margin: 2.25rem;
+    color: #323232;
+    font-size: 24px;
+    line-height: 32px;
+    font-family: "AvenirNextDemi";
+  }
+  .photogallery-content {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 2.25rem;
+    flex-wrap: wrap;
+    margin: 2.25rem;
+  }
+}
+.footer-content {
+  background-color: #323232;
+  padding: 1rem;
+}
+.footer-content__header .list__title {
+  font-size: 24px;
+  line-height: 32px;
+  font-weight: 400;
+  color: #fff;
+  font-family: "AvenirNextDemi";
+}
+.footer-content__header .list__socials {
+  display: flex;
+  justify-content: flex-start;
+}
+.footer-content__header .list__socials .icon {
+  padding: 0 1rem;
+}
+.footer-content__header .no-mobile {
+  display: none;
+}
+.footer-content__list {
+  display: flex;
+  align-content: flex-start;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+.footer-content__list .item {
+  padding: 1rem 0;
+  color: #fff;
+  font-size: 0.625rem;
+  line-height: 20px;
+  font-weight: 400;
+}
+.footer-content__list .item a {
+  color: #fff;
+}
+.footer-content__copyright {
+  font-size: 0.75rem;
+  line-height: 20px;
+  font-weight: 400;
+  text-align: left;
+  color: #fff;
+}
+.footer-content .footer-content__logo {
+  color: #fff;
+}
+
+@media (min-width: 768px) {
+  .footer {
+    background-color: #323232;
+    display: flex;
+    width: 100%;
+    height: auto;
+  }
+  .footer-content {
+    padding: 0 2.25rem;
+    padding-top: 3rem;
+  }
+  .footer-content__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #323232;
+  }
+  .footer-content__header .list {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  .footer-content__header .list__title {
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 400;
+    color: #fff;
+    font-family: "AvenirNextDemi";
+    margin-right: 6.75rem;
+  }
+  .footer-content__header .list__socials .icon {
+    padding: 0 1rem;
+  }
+  .footer-content__header .no-mobile {
+    display: flex;
+    color: #fff;
+  }
+  .footer-content__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
+    align-items: center;
+    background-color: #323232;
+  }
+  .footer-content__list .item {
+    display: block;
+    color: #fff;
+    font-size: 0.75rem;
+    line-height: 20px;
+    align-items: center;
+    width: 100%;
+    flex-wrap: nowrap;
+  }
+  .footer-content__list .item__title {
+    margin-bottom: 2.25rem;
+    font-family: "AvenirNextDemi";
+  }
+  .footer-content__list .item__subtitle {
+    margin-bottom: 2.25rem;
+    font-family: "AvenirNext";
+  }
+  .footer-content__logo {
+    display: none;
+  }
+  .footer-content__copyright {
+    padding-bottom: 2.25rem;
+    font-size: 0.75rem;
+    line-height: 20px;
+    font-weight: 400;
+    text-align: left;
+    color: #fff;
+  }
+}
+@media (min-width: 1024px) {
+  .hero-content__title {
+    padding: 4.5rem;
+  }
+  .photogallery-content {
+    padding: 0 4.5rem;
+  }
+  .navbar-list__title, .about-content__title, .photogallery-title {
+    padding-left: 4.5rem;
+  }
+  .about-content__text {
+    margin: 0 4.5rem;
+  }
+  .about-content__image {
+    margin: 0 4.5rem;
+    padding: 0 4.5rem;
+  }
+  .photogallery-title {
+    font-family: "AvenirNextDemi";
+  }
+  .footer-content {
+    padding: 0 6.75rem;
+  }
+  .footer-content__list {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-start;
+    text-align: left;
+    flex-wrap: nowrap;
+    align-items: center;
+    background-color: #323232;
+  }
+}
+.input {
+  width: 100%;
+  padding: 16px;
+  margin: 16px;
+  border: 1px solid #000;
+  border-radius: 100%;
+}
+
+.comment-img img {
+  width: 100px;
+  height: 100px;
+  filter: grayscale(100%);
+  border-radius: 50%;
+}
+
+.comment-name {
+  background-color: #FAFAFA;
+}
+
+.comment-card:hover {
+  background-color: aqua;
+}
+
+.article:hover {
+  background-color: aqua;
+}
+
+#shows, #bio:hover {
+  border-bottom: 5px solid #fff;
+}
+
+#bio {
+  color: #AFAFAF;
 }
 
 .show-card {
