--- a/styles/shows.css
+++ b/styles/shows.css
@@ -117,9 +117,8 @@ ul, a, a:link, a:visited {
 }
 .hero-content .titles {
   position: absolute;
-  display: flex;
-  flex-direction: column;
-  width: 100%;
+  display: block;
+  width: 75%;
   align-self: center;
   margin-left: 1rem;
 }
@@ -147,11 +146,22 @@ ul, a, a:link, a:visited {
     color: #fff;
     font-family: "AvenirNextDemi", sans-serif;
   }
+  .hero-content__soundcloud {
+    margin: 36px;
+  }
   .hero-content__title {
     font-size: 60px;
     line-height: 68px;
     color: #fff;
     font-family: "AvenirNextBold", sans-serif;
+  }
+  .hero-content__subtitle {
+    font-size: 24px;
+    line-height: 68px;
+    font-weight: 700;
+    color: #fff;
+    font-family: "AvenirNextBold", sans-serif;
+    margin: 36px;
   }
 }
 .hero, .about, .photogallery {
@@ -417,8 +427,33 @@ ul, a, a:link, a:visited {
   }
 }
 @media (min-width: 1024px) {
+  .titles {
+    display: flex;
+    flex-direction: row;
+  }
+  .hero-content .titles {
+    position: absolute;
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    align-items: center;
+    margin: 36px;
+  }
   .hero-content__title {
-    padding: 4.5rem;
+    padding: 0 4.5rem;
+  }
+  .hero-content__subtitle {
+    font-size: 24px;
+    line-height: 68px;
+    font-weight: 700;
+    color: #fff;
+    font-family: "AvenirNextBold", sans-serif;
+    padding: 0 4.5rem;
+  }
+  .hero-content__soundcloud {
+    width: 100%;
+    margin: 36px;
+    height: 166px;
   }
   .photogallery-content {
     padding: 0 4.5rem;
@@ -484,11 +519,18 @@ ul, a, a:link, a:visited {
   color: #AFAFAF;
 }
 
+.shows-container {
+  width: 100%;
+  display: block;
+  margin: 16px 0;
+}
+
 .show-card {
   background-color: #fff;
   transition: background-color 0.3s;
   font-size: 13px;
   font-family: "AvenirNext";
+  width: 100%;
   border-bottom: 2px solid #E1E1E1;
   display: block;
 }
@@ -499,6 +541,7 @@ ul, a, a:link, a:visited {
 
 .show-header {
   display: block;
+  margin: 16px;
 }
 
 .hover-state {
@@ -513,7 +556,7 @@ ul, a, a:link, a:visited {
   background-color: #fff;
 }
 
-.title-array {
+.title-array, .title-array2 {
   color: #AFAFAF;
   font-size: 14px;
 }
@@ -523,10 +566,13 @@ ul, a, a:link, a:visited {
   color: #E1E1E1;
   border-radius: 6px;
   border: 0px;
-  padding: 36px;
+  padding: 16px;
   width: 100%;
   height: auto;
-  margin: 36px;
+  font-family: "AvenirNext";
+  font-weight: 700;
+  font-size: 24px;
+  margin: 0 0 16px 0;
 }
 
 .button:hover {
@@ -542,23 +588,42 @@ ul, a, a:link, a:visited {
     display: flex;
     justify-content: space-between;
   }
+  .showcard-title {
+    font-size: 36px;
+    margin: 36px;
+  }
   .showcard-title2 {
     display: none;
   }
-  .show-header, .show-header2 {
-    width: 100vw;
+  .title-array {
+    width: 30vw;
+  }
+  .show-header2 {
+    width: 75vw;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    font-size: 14px;
+    margin: 36px;
+  }
+  .show-header {
+    width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    font-size: 24px;
+    font-size: 14px;
     margin: 36px;
   }
   .button {
-    width: 25vw;
+    width: 25%;
+    height: 100%;
+    height: auto;
     font-size: 24px;
     font-weight: 700;
     font-family: "AvenirNext";
+    flex-wrap: nowrap;
+    align-self: center;
   }
   .title-array2 {
     display: none;
@@ -571,17 +636,25 @@ ul, a, a:link, a:visited {
   }
   .showcard-title2 {
     width: 100%;
+    font-size: 36px;
     display: flex;
+    margin-right: 10vw;
   }
   .showcard-title {
     display: none;
   }
   .show-card {
     margin-left: 25vw;
+    width: 75vw;
   }
   .show-header2 {
-    width: 100%;
+    width: 75vw;
     text-align: left;
+    display: flex;
+  }
+  .show-header2 p {
+    width: 100%;
+    margin: 36px;
   }
   .title-array2 {
     display: none;
